# 0rbianta-poem-book

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/a0rbiantanniirantolojisi/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native.cpp
app/src/main/java/com/example/a0rbiantanniirantolojisi/: MainActivity.java  global.java  splash.java
app/src/main/res/drawable/: card_custom.xml  card_item_custom.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/example/a0rbiantanniirantolojisi/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
